@@ -210,28 +210,28 @@ serd_node_new_file_uri(const uint8_t* const path,
     }
   }
 
-  SerdChunk chunk = {uri, uri_len};
+  SerdBuffer buffer = {uri, uri_len};
   for (size_t i = 0; i < path_len; ++i) {
     if (is_windows && path[i] == '\\') {
-      serd_chunk_sink("/", 1, &chunk);
+      serd_buffer_sink("/", 1, &buffer);
     } else if (path[i] == '%') {
-      serd_chunk_sink("%%", 2, &chunk);
+      serd_buffer_sink("%%", 2, &buffer);
     } else if (!escape || is_uri_path_char(path[i])) {
-      serd_chunk_sink(path + i, 1, &chunk);
+      serd_buffer_sink(path + i, 1, &buffer);
     } else {
       char escape_str[4] = {'%', 0, 0, 0};
       snprintf(escape_str + 1, sizeof(escape_str) - 1, "%X", (unsigned)path[i]);
-      serd_chunk_sink(escape_str, 3, &chunk);
+      serd_buffer_sink(escape_str, 3, &buffer);
     }
   }
-
-  serd_chunk_sink_finish(&chunk);
+  serd_buffer_sink_finish(&buffer);
 
   if (out) {
-    serd_uri_parse(chunk.buf, out);
+    serd_uri_parse((const uint8_t*)buffer.buf, out);
   }
 
-  return serd_node_from_substring(SERD_URI, chunk.buf, chunk.len);
+  return serd_node_from_substring(
+    SERD_URI, (const uint8_t*)buffer.buf, buffer.len);
 }
 
 SerdNode
